--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start:producer": "node ./producer/index.js",
-    "start:consumer": "node ./consumer/index.js"
+    "start:producer": "node ./producer.js",
+    "start:consumer": "node ./consumer.js"
   },
   "author": "",
   "license": "ISC",
