--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "start:producer": "node ./producer.js",
-    "start:consumer": "node ./consumer.js"
+    "start:consumer": "node ./consumer.js",
+    "start:db": "node ./initDb.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "avsc": "^5.7.7",
+    "clickhouse": "^2.6.0",
     "node-rdkafka": "^3.2.1"
   }
 }
