--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start:db": "node ./initDb.js",
     "start:producer": "node ./producer.js",
-    "start:consumer": "node ./consumer.js",
-    "start:db": "node ./initDb.js"
+    "start:consumer": "node ./consumer.js"
   },
   "author": "",
   "license": "ISC",
